--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -89,6 +89,9 @@
 		}
 
 		.spinning {
+			border-radius: 50%;
+    		width: 300px;
+    		height: 300px;
 			animation: spin 3s linear infinite;
 		}
 
@@ -100,7 +103,7 @@
 </head>
 <body>
 	<header>
-		<h1>Healthy Roulette</h1>
+		<h1>HEALTHY ROULETTE</h1>
 		<nav>
 			<a href="https://www.facebook.com">Facebook</a>
 			<a href="https://www.instagram.com">Instagram</a>
@@ -110,10 +113,11 @@
 	</header>
 	<br><div style="text-align: center;">
 	<form action="/form" method="POST">
-		<button class="bubble-letters">Healthy Roulette</button>
+		<button class="bubble-letters">Click to Spin!</button>
 	</form>
 </div>
 <br><div style="text-align: center;">
+	</spinning>
 	<img src="static/spinning.gif" alt="wheel">
 </div>
 <footer class="footer">
