--- a/templates/meal.html
+++ b/templates/meal.html
@@ -6,9 +6,15 @@
     <title>Generated Meal</title>
 </head>
 <body>
-    <h1>Your Generated Meal:</h1><br>
+    <h1>We believe you might like:</h1><br>
     <p>{{ meal }}</p>
     <h2>Learn to make it:</h2><br>
     <iframe width="560" height="315" src="{{ video_url }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<footer class="footer">
+	<div class="menu-link">
+        <a href="/meal">Click here to spin again!</a>
+	</div>
+</footer>
 </body>
 </html>
