--- a/templates/dietary_restrictions.html
+++ b/templates/dietary_restrictions.html
@@ -57,8 +57,8 @@
 </style>
 </head>
 <body>
-	<h1>Dietary Restrictions Form</h1>
-	<p>Please check any dietary restrictions that apply:</p>
+	<h1>Let's Personalize Your Meal Plan!</h1>
+	<p>We want to make sure your meal plan is tailored to your needs. Please let us know if you have any dietary restrictions:</p>
 	<form action="/meal" method="POST">
 		<label for="gluten-free">
 			<input type="checkbox" id="gluten-free" name="gluten-free"> Gluten-free
