--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -25,6 +25,7 @@
 			padding: 20px;
 			background-color: #1ABC9C;
 			color: white;
+			text-align: center;
 		}
 
 		h1 {
@@ -100,31 +101,47 @@
 			to {transform: rotate(360deg);}
 		}
 	</style>
+
+    <title>Audio</title>
+
 </head>
 <body>
-	<header>
-		<h1>HEALTHY ROULETTE</h1>
-		<nav>
-			<a href="https://www.facebook.com">Facebook</a>
-			<a href="https://www.instagram.com">Instagram</a>
-			<a href="https://www.twitter.com">Twitter</a>
-			<a href="https://www.github.com">GitHub</a>
-		</nav>
+
+    <audio controls loop autoplay hidden>
+        <source src="static/spinsound.mp3" type="audio/mp3">
+    </audio>
+
+	<header style="text-align: center;">
+		<h1>~~~~~~~~~~~WELCOME TO THE HEALTHY ROULETTE~~~~~~~~~~~</h1>
 	</header>
+
 	<br><div style="text-align: center;">
-	<form action="/form" method="POST">
-		<button class="bubble-letters">Click to Spin!</button>
-	</form>
-</div>
-<br><div style="text-align: center;">
-	</spinning>
-	<img src="static/spinning.gif" alt="wheel">
-</div>
-<footer class="footer">
-	<div class="container">
-		<p>Copyright © 2023
-			<a href="#">Meal Roulette</a> | All rights reserved.</p>
+		<form action="/form" method="POST" onsubmit="spinButton.disabled = true; setTimeout(function(){ window.location.href='/meal' }, 30000000); return true;">
+			<button id="spinButton" class="bubble-letters" type="submit">Click to Spin!</button>
+		</form>
 	</div>
-</footer>
-	</body>
-	</html>
+
+	<br><div style="text-align: center;">
+		<img src="static/spinning.gif" alt="wheel" class="spinning">
+	</div>
+
+	<footer class="footer">
+		<div class="container">
+			<p>
+				Copyright © 2023
+				<a href="#">Meal Roulette</a> | All rights reserved.
+			</p>
+		</div>
+	</footer>
+
+	<script>
+		// Get the audio element
+		var audioElement = document.getElementById("spinsound");
+		// Wait for it to load and play it
+		audioElement.addEventListener("canplaythrough", function() {
+			audioElement.play();
+		});
+	</script>
+
+</body>
+</html>
